--- a/index.html
+++ b/index.html
@@ -10,60 +10,71 @@
     <link rel="stylesheet" href="css/player-crimson.css">
     <link rel="stylesheet" href="https://cdn.plyr.io/3.7.8/plyr.css">
 
-
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Nunito:300,400,600,700,800&display=swap" rel="stylesheet">
+    
+    <style>
+        /* Style pour la zone d'affichage du titre, du temps et du poster */
+        .video-info {
+            position: absolute;
+            top: 20px; /* Ajustement de la hauteur du texte */
+            left: 10px;
+            color: white;
+            padding: 10px;
+            border-radius: 5px;
+            display: none; /* Masque par défaut */
+            flex-direction: row; /* Aligne le poster avec le texte */
+            align-items: flex-start;
+            font-size: 1.2em;
+            z-index: 1000;
+        }
+
+        .video-info img {
+            width: 150px;
+            height: auto;
+            margin-right: 10px;
+        }
+
+        .watching-text {
+            font-size: 1em;
+            margin-bottom: 5px;
+        }
+
+        #video-title {
+            font-weight: bold;
+            font-size: 1.5em;
+        }
+
+        #video-time {
+            font-size: 1em;
+        }
+    </style>
+
 </head>
 <body>
-    <!-- Video Player Section -->
-    <div class="video-container">
-        <video id="player" playsinline controls preload="metadata" poster="https://xalaflix.eu/upload/images/bmFSbK6HMDz5moHjIkf3BatBdca.jpg">
-            <source id="video-source" src="https://kangourou.online/films_720p/Nowhere.mov" type="video/mp4">
-            <track kind="subtitles" label="Français" srclang="fr" src="subtitles.vtt" default>
-            Votre navigateur ne prend pas en charge la balise vidéo.
-        </video>
+    <div class="video-info" id="video-info">
+        <img id="video-poster" src="img/nowhere.webp" alt="Poster du film">
+        <div>
+            <span class="watching-text">Vous regardez</span><br>
+            <strong id="video-title"></strong><br>
+            <span id="video-time"></span>
+        </div>
     </div>
+
+    <video id="player" playsinline controls preload="metadata" poster="https://xalaflix.eu/upload/images/bmFSbK6HMDz5moHjIkf3BatBdca.jpg">
+        <source id="video-source" src="https://pub-eef61110974d4ef6910be15b4e59be3a.r2.dev/films-720p/Moi-Moche-et-Mechant-4.mp4" type="video/mp4">
+        <track kind="subtitles" label="Français" srclang="fr" src="sous-titres/subtitles.vtt" default>
+        Votre navigateur ne prend pas en charge la balise vidéo.
+    </video>
 
     <!-- JS Imports -->
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
-    <script disable-devtool-auto title="3" src='https://cdn.jsdelivr.net/npm/disable-devtool'></script>
     <script src="https://cdn.plyr.io/3.7.8/plyr.polyfilled.js"></script>
     <script src="js/FWDEVPlayer.js"></script>
 
     <!-- Combined FWDEVPlayer and Plyr Script -->
     <script type="text/javascript">
-        // Initialisation de FWDEVPlayer
-        FWDEVPUtils.onReady(function () {
-            new FWDEVPlayer({
-                instanceName: "player2",
-                parentId: "player",
-                skinPath: "classic_skin_dark",
-                videoSource: [{ source: "https://kangourou.online/films_720p/Nowhere.mov", label: "720p" }],
-                autoPlay: "no",
-                loop: "yes",
-                maxWidth: 750,
-                maxHeight: 425,
-                volume: 0.8,
-                backgroundColor: "#000000",
-                // controller settings
-                showController: "yes",
-                showTime: "yes",
-                showFullScreenButton: "yes",
-                showVolumeButton: "yes",
-                showScrubberWhenControllerIsHidden: "yes",
-                controllerHeight: 43,
-                spaceBetweenButtons: 11,
-                // sticky on scroll
-                stickyOnScroll: "yes",
-                stickyOnScrollWidth: "700",
-                stickyOnScrollHeight: "394",
-                verticalPosition: "bottom",
-                horizontalPosition: "center"
-            });
-        });
-
-        // Initialisation de Plyr
         document.addEventListener('DOMContentLoaded', () => {
             const playerControls = ['play-large', 'play', 'progress', 'current-time', 'mute', 'volume', 'fullscreen', 'settings', 'download'];
 
@@ -94,23 +105,69 @@
                     disabled: 'Désactivé',
                     enabled: 'Activé',
                     captions: 'Sous-titres',
-                    
                 },
             });
 
-            // Afficher l'indicateur de chargement jusqu'à ce que la vidéo puisse être lue
             const videoElement = document.getElementById('player');
-            const loadingElement = document.getElementById('loading');
-            videoElement.addEventListener('canplay', () => {
-                loadingElement.style.display = 'none';
+            const videoInfo = document.getElementById('video-info');
+            const videoTitle = document.getElementById('video-title');
+            const videoTime = document.getElementById('video-time');
+
+            const updateVideoInfo = () => {
+                const currentTime = videoElement.currentTime;
+                const duration = videoElement.duration;
+
+                videoTitle.textContent = "Nowhere"; // Nom du film
+                videoTime.textContent = `Temps actuel : ${formatTime(currentTime)} / ${formatTime(duration)}`;
+            };
+
+            // Fonction pour vérifier si l'écran est supérieur à 768x625
+            const isLargeScreen = () => window.innerWidth > 768 && window.innerHeight > 625;
+
+            // Afficher les informations lorsque la vidéo est mise en pause
+            videoElement.addEventListener('pause', () => {
+                if (isLargeScreen()) {
+                    updateVideoInfo();
+                    videoInfo.style.display = 'flex'; // Affiche la zone d'information
+                }
             });
+
+            // Masquer les informations lorsque la vidéo est lancée
+            videoElement.addEventListener('playing', () => {
+                videoInfo.style.display = 'none'; // Cache la zone d'information lorsque la vidéo est lue
+            });
+
+            // Masquer les informations lorsque la vidéo est complètement arrêtée
+            videoElement.addEventListener('ended', () => {
+                videoInfo.style.display = 'none'; // Cache la zone d'information lorsque la vidéo se termine
+            });
+
+            // Gérer l'affichage en plein écran
+            player.on('enterfullscreen', () => {
+                videoInfo.style.display = 'none'; // Cache la zone d'information en plein écran
+            });
+
+            player.on('exitfullscreen', () => {
+                if (videoElement.paused && isLargeScreen()) {
+                    updateVideoInfo();
+                    videoInfo.style.display = 'flex'; // Affiche les informations si la vidéo est en pause
+                }
+            });
+
+            // Fonction pour formater le temps (en secondes) en minutes ou en heures
+            function formatTime(seconds) {
+                if (seconds < 3600) {
+                    const minutes = Math.floor(seconds / 60);
+                    const secs = Math.floor(seconds % 60);
+                    return `${minutes}:${secs < 10 ? '0' : ''}${secs}`; // format MM:SS
+                } else {
+                    const hours = Math.floor(seconds / 3600);
+                    const minutes = Math.floor((seconds % 3600) / 60);
+                    const secs = Math.floor(seconds % 60);
+                    return `${hours}:${minutes < 10 ? '0' : ''}${minutes}:${secs < 10 ? '0' : ''}${secs}`; // format HH:MM:SS
+                }
+            }
         });
     </script>
-     <script>
-        // Fonction executée lors de l'utilisation du clic droit.
-        $(document).bind("contextmenu",function(){
-        // On indique au navigateur de ne pas réagir en cas de clic droit.
-        return false; });
-        </script>
 </body>
 </html>
