--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     <link href="https://fonts.googleapis.com/css?family=Nunito:300,400,600,700,800&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+
     <video id="player" playsinline controls preload="metadata" poster="https://xalaflix.eu/upload/images/bmFSbK6HMDz5moHjIkf3BatBdca.jpg">
-        <source id="video-source" src="https://pub-eef61110974d4ef6910be15b4e59be3a.r2.dev/films-720p/Moi-Moche-et-Mechant-4.mp4" type="video/mp4">
+        <source id="video-source" src="https://mayi22140.mayicloud.com/files/aa/bU4cGZhssurEmByhmkSHnXVytre4pqbAkgM.m3u8" type="video/mp4">
         <track kind="subtitles" label="Français" srclang="fr" src="sous-titres/subtitles.vtt" default>
         Votre navigateur ne prend pas en charge la balise vidéo.
     </video>
@@ -25,7 +25,6 @@
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="https://cdn.plyr.io/3.7.8/plyr.polyfilled.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
     <script src="js/FWDEVPlayer.js"></script>
 
     <!-- Combined FWDEVPlayer and Plyr Script -->
@@ -107,4 +106,5 @@
     </script>
 </body>
 </html>
+
 
